[project]
name = "kuadrant-docs"
version = "0.1.0"
description = "Documentation for Kuadrant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs-multirepo-plugin==0.8.3",
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.44",
    "mike==2.1.3",
    "mdx-breakless-lists==1.0.1",
    "mkdocs-redirects==1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []